@@ -1,5 +1,10 @@
 2005-11-15  Vincent Noel <vincent.noel@gmail.com>
 
+	* misc.c (locale_to_utf8): Better logic.
+	* userprefs.c (prefs_store_window_size): Remove a few FIXMEs.
+
+2005-11-15  Vincent Noel <vincent.noel@gmail.com>
+
 	* userprefs.c: (prefs_monospace_font_changed),
 	(prefs_menus_have_tearoff_changed), (prefs_connect): Listen to the
 	menus_have_tearoff gconf key.
